tex header added

--- a/doku/spezi/spezi.tex
+++ b/doku/spezi/spezi.tex
@@ -1,6 +1,4 @@
-\chapter{Spezifikation}
-
-Crawlermodul
+\chapter{Crawlermodul}
 
 Die Steuerung erfolgt über ein Configfile (optional Kommandozeileninterface).
 Es können folgende Parameter eingestellt werden:
