added funny diagram, which certainly has been created under the influence of some psychedelic fungi

--- a/doku/dokumentation.tex
+++ b/doku/dokumentation.tex
@@ -35,9 +35,7 @@
 
 %*** title usw.
 \title{Dokumentation\\
-Praktikum Software Entwicklung
-
-Internettechniken}
+Praktikum Software Entwicklung }
 \author{Dozent: Prof. Dr. Richard Göbel \\
 Beteiligte Studenten: \\
 Christoph Piechula \\
