--- a/doku/spezi/spezi.tex
+++ b/doku/spezi/spezi.tex
@@ -1,5 +1,9 @@
 \chapter{Crawlermodul}
-
+\begin{figure}
+	\centering
+	\includegraphics[width=\textwidth]{spezi/webarchiv_design.pdf}
+	\caption{Diagramm: Grundlegendes Design}
+\end{figure}
 Die Steuerung erfolgt über ein Configfile (optional Kommandozeileninterface).
 Es können folgende Parameter eingestellt werden:
 \begin{itemize}
